--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 </head>
 <body>
     <h1>Chris Katsaros</h1>
-    <img src="./image_50398209.JPG" alt="Chris Katsaros" height="200" />
-    <pr> <h2> Summary</h2></pr>
-    I am a graduate of the Department of Economic and Regional Development at Panteion University,<br/> 
-    with fluency in English and strong computer skills. I am actively involved in sports and known for  <br/>
-    being communicative with a strong willingness to take initiatives and responsibilities, with a proven <br/>
-    ability to collaborate effectively and innovatively.
+    <a href="./summary.html" > <img src="./image_50398209.JPG" height="200"  alt="Chris Katsaros"> <h5>Summary</h5> </a>
     <hr/>
     <hr/>
     <h2>Education</h2>
