--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr/>
     <hr/>
     <h2>Education</h2>
-    <pr/>  <ul>   <li> Bachelor's Degree in Economi and Regional  Development from Panteion University</li>
+    <pr/>  <ul>   <li> Bachelor's Degree in Economic and Regional  Development from Panteion University</li>
    
     <hr/>
           </ul>
@@ -36,7 +36,7 @@
 
     </pr>      
     <pr>   <ul>    <li> <h3>  February 2023 - August 2023: Product Listing, E-shop  </h3></li>
-                <ul>   <li>Managed product data entry and updates on the ESOP e-commerce platform.   </li>
+                <ul>   <li>Managed product data entry and updates on a e-commerce platform.   </li>
                         <li>Ensured accurate product descriptions and pricing. </li>
 
                 </ul>
