--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 body{
   background-color: rgb(228, 248, 248);
-  background-image: url(../CodePNG.gif);
+  background-image: url(./CodePNG.gif);
 }
                                               
  
