--- a/summary.html
+++ b/summary.html
@@ -18,7 +18,7 @@ body{
    text-align: center;
    list-style-position: inside;
    background-color: rgb(243, 238, 238);
-   background-image: url(../CodePNG.gif);
+   background-image: url(./CodePNG.gif);
 }
 
    </style>
