--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body{
   background-image: url(./CodePNG.gif);
 }
                                               
- 
+
 h2{font-family: "Handjet", system-ui;
   font-optical-sizing: auto;
   font-weight: 450;
@@ -42,6 +42,11 @@ text-align: center;
 list-style-position: inside;
 
 }
+
+#A{
+  text-decoration: none;
+  color: inherit;
+} 
     </style>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,7 +57,7 @@ list-style-position: inside;
 </head>
 <body>
     <h1>Chris Katsaros</h1>
-    <a href="./summary.html" > <img src="./image_50398209.JPG" height="200"  alt="Chris Katsaros"> <h5>Summary</h5> </a>
+    <a id="A" href="./summary.html" > <img src="./image_50398209.JPG" height="200"  alt="Chris Katsaros"> <h5>Summary</h5> </a>
 
     <hr/>
     <hr/>
