--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,33 @@
-<h1>Contact Me</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=, initial-scale=1.0">
+   <title>contact</title>
+   <style>
+h2{
+   font-family: "Handjet", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 450;
+  font-style: normal;
+  background-color: rgb(243, 238, 238);
+  text-align: center;
+
+}
+
+body{text-align: center;
+    list-style-position: inside;
+    background-position: center;
+    font-family: monospace;
+    background-image: url(./CodePNG.gif);
+    font-weight: 550;
+    font-size: larger;
+    font-style: oblique;
+}
+   </style>
+</head>
+<body>
+   <h2>Contact Me</h2>
 <hr>
 <p> <ul><li>Tel: +30 6947199318</li>
          <li>Email: chr.katsaros99@gmail.com</li> 
@@ -9,3 +38,6 @@
    <h4>121 33, Athens/Greece</h4>
    
 </p>
+   
+</body>
+</html>
