--- a/hobbies.html
+++ b/hobbies.html
@@ -1,5 +1,42 @@
-<h3>Hobbies and Interests</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        h2{
+            font-family: "Handjet", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 450;
+  font-style: normal;
+  background-color: rgb(243, 238, 238);
+  text-align: center;
+
+        }
+        body{text-align: center;
+    list-style-position: inside;
+    background-position: center;
+    font-family: monospace;
+    background-image: url(./CodePNG.gif);
+    font-weight: 550;
+    font-size: larger;
+    font-style: oblique;
+         }
+
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap" rel="stylesheet">
+
+
+</head>
+<body>
+    <h2>Hobbies and Interests</h2>
 <hr>
 <pr> <ul> <li>Engaged in sports activities, including running, basketball, and martial arts.</li></ul>
 
 </pr>
+    
+</body>
+</html>
