--- a/militaryservice.html
+++ b/militaryservice.html
@@ -1,3 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>military service</title>
+<style>
+  h2{font-family: "Handjet", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 450;
+  font-style: normal;
+  background-color: rgb(243, 238, 238);
+  text-align: center;
+  }
+  body{
+    text-align: center;
+    list-style-position: inside;
+    background-position: center;
+    font-family: monospace;
+    background-image: url(./CodePNG.gif);
+  }
+  h3{
+
+    font-weight: 900;
+    color: rgb(185, 183, 183);
+  }
+
+
+
+
+</style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap" rel="stylesheet">
+
+</head>
+<body>
+
 </ul>
     
     
@@ -6,3 +44,13 @@
       <ul><li>Served in special forces in Kos island, gaining valuable experience in teamwork, discipline, and physical endurance </li></ul>
 
    </ul>
+
+
+
+
+
+
+
+  
+</body>
+</html>
