--- a/summary.html
+++ b/summary.html
@@ -1,5 +1,5 @@
  
- <!DOCTYPE html>
+<!DOCTYPE html>
  <html lang="en">
  <head>
    <meta charset="UTF-8">
@@ -19,6 +19,9 @@ body{
    list-style-position: inside;
    background-color: rgb(243, 238, 238);
    background-image: url(./CodePNG.gif);
+   font-weight: 550;
+   font-size: larger;
+   font-style: oblique;
 }
 
    </style>
