--- a/militaryservice.html
+++ b/militaryservice.html
@@ -9,7 +9,7 @@
   font-optical-sizing: auto;
   font-weight: 450;
   font-style: normal;
-  background-color: rgb(243, 238, 238);
+  background-color:(243, 238, 238);
   text-align: center;
   }
   body{
