--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@ body{text-align: center;
     font-style: oblique;
 }
    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
    <h2>Contact Me</h2>
