--- a/militaryservice.html
+++ b/militaryservice.html
@@ -18,6 +18,9 @@
     background-position: center;
     font-family: monospace;
     background-image: url(./CodePNG.gif);
+    font-weight: 550;
+   font-size: larger;
+   font-style: oblique;
   }
   h3{
 
