--- a/militaryservice.html
+++ b/militaryservice.html
@@ -9,19 +9,19 @@
   font-optical-sizing: auto;
   font-weight: 450;
   font-style: normal;
-  background-color: (243, 238, 238);
+  background-color: rgb (243, 238, 238);
   text-align: center;
-  }
   }
   body{
     text-align: center;
     list-style-position: inside;
     background-position: center;
     font-family: monospace;
-    background-image: url(./CodePNG.gif);
+    background-image: url(../CodePNG.gif);
     font-weight: 550;
    font-size: larger;
    font-style: oblique;
+
   }
   h3{
 
